--- a/webpagemaker/learning_projects/templates/learning_projects/nypl.html
+++ b/webpagemaker/learning_projects/templates/learning_projects/nypl.html
@@ -50,7 +50,7 @@ Step 5: Paste in the code from your 3D creation below. (The HTML should look jus
 
     <a href="http://stereo.nypl.org/view/34640">
       <img alt="ANAGLYPH made with the NYPL Labs Stereogranimator - view more at http://stereo.nypl.org/gallery/index"
-           src="http://stereo.nypl.org/view/34640.png">
+           src="{{ HTTP_STATIC_URL }}nypl/34640.png">
       <br>
       ANAGLYPH made with the NYPL Labs Stereogranimator
     </a>
@@ -83,7 +83,7 @@ Everything inside the <style> tag is called CSS and is used to define the look a
 
       html {
         padding-top: 50px;
-        background-image: url(http://stereo.nypl.org/assets/background-44b997dcb8969b003f7ce4fccd1b37cd.png);
+        background-image: url({{ HTTP_STATIC_URL }}nypl/stripes.png);
         background-repeat: repeat;
         color: #808080;
         font-family: Georgia, serif;
