--- a/webpagemaker/learning_projects/templates/learning_projects/stuck.html
+++ b/webpagemaker/learning_projects/templates/learning_projects/stuck.html
@@ -228,7 +228,7 @@ Headlines and Subheads act as visual cues to guide the user through content. Add
 A picture is worth a thousand words. Try replacing the image below with one of your own. Add a few more images.
 -->
       <section id="artwork">
-        <img src="http://dismagazine.com/uploads/2010/03/Grunge.jpg" width="364px">
+        <img src="{{ HTTP_STATIC_URL }}stuck/grunge.jpg" width="364px">
       </section>
     </div>
 
