--- a/webpagemaker/learning_projects/templates/learning_projects/webstructable.html
+++ b/webpagemaker/learning_projects/templates/learning_projects/webstructable.html
@@ -37,7 +37,7 @@ The <p> tag below stands for paragraph and is one of the most commonly used elem
 <!--
 Now let's work with images. Images use the <img> tag which requires a src attribute which defines the URL where the image lives. Try changing out this image of an exploding bomb (who wants that anyway?) with one that matches your tutorial. To do this, go find the url of another image that you want on the Web, right click and copy the image address, and then replace the image url within <img> tag below. Note that <img> is one of the few weird tags that doesn't have a close tag.
 -->
-        <img src="http://recollectionbooks.com/bleed/images/BB/pow.gif">
+        <img src="{{ HTTP_STATIC_URL }}webstructable/pow.gif">
       </section>
 
       <section id="lesson">
