Removing extraneous octothorpe.

--- a/webpagemaker/learning_projects/templates/learning_projects/bakery.html
+++ b/webpagemaker/learning_projects/templates/learning_projects/bakery.html
@@ -185,7 +185,7 @@ Congrats! You've successfully fixed Loaf Cat's party! Looks like its going to be
       Firefox badge: http://thekruser.com/media/4sq/badges/sxsw2011_firefox.png
       Audio: title: 8bit morph
              artist: bilou le skankerfou
-             link: http://www.jamendo.com/en/track/759486/8-bit-morph#
+             link: http://www.jamendo.com/en/track/759486/8-bit-morph
 -->
 
 </html>
