Updating button text.

--- a/webpagemaker/website/templates/website/home.html
+++ b/webpagemaker/website/templates/website/home.html
@@ -17,9 +17,9 @@
           finished pages with a single click. Easy, huh?
         </p>
         <p class='intro-bar'>
-          <a class="button-blue start" href="{{ url('webpagemaker.editor.views.default_editor') }}">projects, wut</a>
+          <a class="button-blue start" href="{{ url('webpagemaker.editor.views.default_editor') }}">Start from scratch</a>
           <em>or</em>
-          <a class="button start" href="{{ url('webpagemaker.editor.views.default_editor') }}">starter page, lol</a>
+          <a class="button start" href="{{ url('webpagemaker.website.views.projects') }}">Pick a project</a>
         </p>
       </div>
       <div class="pat span4">
