Update zoo project with correct logo

--- a/webpagemaker/learning_projects/templates/learning_projects/zoo.html
+++ b/webpagemaker/learning_projects/templates/learning_projects/zoo.html
@@ -43,7 +43,7 @@
                             <div class="span10">
                                 <div class="logo">
                                     <a href="/en-US/">
-                                        <img src="/media/img/header_logo.png">
+                                        <img src="/media/img/thimble-logo.png">
                                     </a>
                                 </div>
                                 <a href="http://www.mozilla.org/" id="tabzilla">Mozilla</a>
