--- a/webpagemaker/learning_projects/templates/learning_projects/bakery.html
+++ b/webpagemaker/learning_projects/templates/learning_projects/bakery.html
@@ -17,8 +17,8 @@ Let's get started.
   <head>
     <meta charset="utf8">
     <title>Bakery Bash</title>
-    <link href="http://fonts.googleapis.com/css?family=Sue+Ellen+Francisco" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Sue+Ellen+Francisco" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet" type="text/css">
   </head>
 
 <!-- The stuff between the open <body> tag and close </body> tag is what you see on the page.-->
