--- a/webpagemaker/learning_projects/templates/learning_projects/webstructable.html
+++ b/webpagemaker/learning_projects/templates/learning_projects/webstructable.html
@@ -15,8 +15,8 @@ Let's get started.
   <head>
     <meta charset="utf-8">
     <title> Webstructable</title>
-    <link href="http://fonts.googleapis.com/css?family=Sue+Ellen+Francisco" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Sue+Ellen+Francisco" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet" type="text/css">
   </head>
 
   <body>
