The slurp giveth and the slurp taketh away.

--- a/webpagemaker/learning_projects/templates/learning_projects/map.html
+++ b/webpagemaker/learning_projects/templates/learning_projects/map.html
@@ -26,8 +26,8 @@ Start by changing the <title> element to one for your map. Typically, the title 
 <!--
 These <link> tags pull in additional style sheets for things like fonts, etc. You'll see some CSS below in the <style> tag that you can edit directly.
 -->
-    <link href="https://fonts.googleapis.com/css?family=Sue+Ellen+Francisco" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet" type="text/css">
+    <link href="//fonts.googleapis.com/css?family=Sue+Ellen+Francisco" rel="stylesheet" type="text/css">
+    <link href="//fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet" type="text/css">
     <link href="{{ HTTP_STATIC_URL }}map/arcademap_styles.css" rel="stylesheet" type="text/css">
   </head>
   
