Serve youtube from https

--- a/webpagemaker/learning_projects/templates/learning_projects/soapbox.html
+++ b/webpagemaker/learning_projects/templates/learning_projects/soapbox.html
@@ -32,7 +32,7 @@ Now let's change out this video with one that matches your message. First let's 
 
 Note: before you change the video, watch this one to learn a little more about copyright, copyleft, attributing and using existing work.
 -->
-    <iframe allowfullscreen="" frameborder="0" height="240" src="http://www.youtube.com/embed/1DKm96Ftfko" width="320"></iframe>
+    <iframe allowfullscreen="" frameborder="0" height="240" src="//www.youtube.com/embed/1DKm96Ftfko" width="320"></iframe>
 
 <!--
 The <p> tag is used for paragraphs of text. Change the text below to add some narrative to your page. The example below is a quote from The Lorax by Dr. Seuss, which is a great book about civic engagement and thinking global but acting local. Check it out in children's section of your local library http://nypl.bibliocommons.com/item/show/17468203052_the_lorax
