--- a/webpagemaker/learning_projects/templates/learning_projects/webstructable.html
+++ b/webpagemaker/learning_projects/templates/learning_projects/webstructable.html
@@ -61,7 +61,7 @@ You may notice an <iframe> tag below - an iframe is a container used to pull in 
         <p>
           You have a video too!? Now we're talking!
         </p>
-        <iframe width="560" height="315" src="http://www.youtube.com/embed/kmk43_2dtn0" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="//www.youtube.com/embed/kmk43_2dtn0" frameborder="0" allowfullscreen></iframe>
       </section>
     </div>
 
