Try to fix bakery bash audio; pull in supergirl.

--- a/webpagemaker/learning_projects/templates/learning_projects/bakery.html
+++ b/webpagemaker/learning_projects/templates/learning_projects/bakery.html
@@ -99,7 +99,7 @@ Way to go, these guests look way more fun, how about adding some music? Time to 
   Vimeo has free CC-licensed tracks in addition to tracks that you can pay for:http://vimeo.com/musicstore.
 -->
 
-    <audio autoplay>
+    <audio autoplay="true">
       <source src="{{ HTTP_STATIC_URL }}bakery/8-bit-morph.mp3" type='audio/mpeg; codecs="mp3"'>
     </audio>
 
