--- a/webpagemaker/learning_projects/templates/learning_projects/zombies.html
+++ b/webpagemaker/learning_projects/templates/learning_projects/zombies.html
@@ -96,7 +96,7 @@ Remember all those things we were moving... well they are these images below! Yo
 <!--
 So we now know how to defeat the zombies, but why not make them be other people? Try removing the comment tags on the image below that you see before	and after this text to reveal a new person.
 -->
-		<!-- <img src="http://hackasaurus.org/images/goggles/supergirl.png" alt="" class="zombie" id="zombie1" /> -->
+		<!-- <img src="{{ HTTP_STATIC_URL }}zombies/supergirl.png" alt="" class="zombie" id="zombie1"> -->
 		
 <!-- She doesn't look that scary but one can never be too careful, better block her too! -->
 	
