--- a/webpagemaker/website/templates/website/layout.html
+++ b/webpagemaker/website/templates/website/layout.html
@@ -27,7 +27,7 @@
           <div class="span10">
             <div class="logo">
               <a href="{{ url('webpagemaker.website.views.home') }}">
-                <img src="/media/img/thimble-logo.png">
+                <img src="/media/img/thimble-logo.png" alt="Mozilla Thimble">
               </a>
             </div>
             <a href="http://www.mozilla.org/" id="tabzilla">Mozilla</a>
@@ -52,7 +52,7 @@
       <footer id="colophon">
         <div class="row">
           <div class="span2">
-            <h2><img src="/media/img/footer-logo.png" alt="Mozilla Thimble"></h2>
+            <h2><img src="/media/img/footer-logo.png" alt="Mozilla Webmaker"></h2>
           </div>
 
           <nav class="span2">
@@ -62,7 +62,7 @@
               <li><a href="mailto:mozparty@mozilla.org">Contact Us</a></li>
               <li><a href="//www.mozilla.org/en-US/privacy-policy">Privacy Policy</a></li>
               <li><a href="//www.mozilla.org/en-US/about/legal.html">Legal Notices</a></li>
-            <ul>
+            </ul>
           </nav>
           <nav class="span2">
             <h3>Connect with us</h3>
