Added header and footer sections. Consolidated some extraneous divs, simplified the javascriptgrid.org Less Framework 4 link to be non-responsive (like the site), added in the list/thumb view sprites. Who knows what else?

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -45,5 +45,17 @@ section {
 .backdrop {
   background: #e8fcf2;
   padding-top: 10px;
+  padding-bottom: 10px;
 }
 
+/* We have to redefine these here to change the url path, which seems dumb. */
+  .view-style a.list {
+    background: url(../img/list_sprite.png) no-repeat scroll left top;
+  }
+  .view-style a.thumbs {
+    background: url(../img/thumb_sprite.png) no-repeat scroll left top;
+  }
+
+.pt {
+  padding-top: 1em;
+}
