Adding IDL to projects page

--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -211,6 +211,16 @@
          ) 
       }}
 
+ 	    {{ project(
+           title       = "Join the Internet Defense League",
+           description = "The  internet is a vital resource that we all need to protect (which you  already know, or else you wouldn't be here!). The <a href=\"http://internetdefenseleague.org\">Internet Defense League (IDL)</a> is an effort to coordinate those who would defend the net against threats from governments and corporations—think of it as the internet's Emergency Broadcast System, or its bat signal!<br><br>
+         Starting with this project, you can make your own Internet Defense League Campaign that you can easily send to anyone who should see it—your representatives in government, or friends and family, or anyone else you can think of.",
+           author      = "Mozilla",
+           url         = url('edit_project', 'idl'),
+           img         = "/media/img/projects/idl.png"
+         ) 
+      }}
+
     </ul>
   </div>
       
