Updated IDL title, author & page position

--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -79,6 +79,16 @@
          )
        }}
 
+ 	     {{ project(
+           title       = "Create Your Own Page To Defend Internet Freedom",
+           description = "The  internet is a vital resource that we all need to protect (which you  already know, or else you wouldn't be here!). The <a href=\"http://internetdefenseleague.org\">Internet Defense League (IDL)</a> is an effort to coordinate those who would defend the net against threats from governments and corporations—think of it as the internet's Emergency Broadcast System, or its bat signal!<br><br>
+         Starting with this project, you can make your own Internet Defense League Campaign that you can easily send to anyone who should see it—your representatives in government, or friends and family, or anyone else you can think of.",
+           author      = "Internet Defense League",
+           url         = url('edit_project', 'idl'),
+           img         = "/media/img/projects/idl.png"
+         ) 
+       }}
+
        {{ project(
            title       = "Learn HTML fast by making your own web page",
            description = "Learn HTML basics using Mozilla's Thimble to make your first web page. This starter project helps you play around with the most common HTML elements and tags using a simple side-by-side visual editor. It's a great way to gain some of the baseline skills you'll need for other Webmaker projects&mdash;or to start a project of your own! If you have no HTML experience, give this one a go first. You'll be surprised by how easy it is to get started.",
@@ -208,16 +218,6 @@
            url         = url('edit_project', 'webstructable'),
            img         = "/media/img/projects/Webstructables.jpg",
            webarcade   = true
-         ) 
-      }}
-
- 	    {{ project(
-           title       = "Join the Internet Defense League",
-           description = "The  internet is a vital resource that we all need to protect (which you  already know, or else you wouldn't be here!). The <a href=\"http://internetdefenseleague.org\">Internet Defense League (IDL)</a> is an effort to coordinate those who would defend the net against threats from governments and corporations—think of it as the internet's Emergency Broadcast System, or its bat signal!<br><br>
-         Starting with this project, you can make your own Internet Defense League Campaign that you can easily send to anyone who should see it—your representatives in government, or friends and family, or anyone else you can think of.",
-           author      = "Mozilla",
-           url         = url('edit_project', 'idl'),
-           img         = "/media/img/projects/idl.png"
          ) 
       }}
 
