Changed tabs to whitespace in s2r project, fixed projects page typos.

--- a/webpagemaker/website/templates/website/projects.html
+++ b/webpagemaker/website/templates/website/projects.html
@@ -202,7 +202,7 @@
 
       {{ project(
            title       = "Supporter 2 Reporter",
-           description = "Build your own news media page, including your own reporting video, about at topic you care about, such as the Olympics. ", 
+           description = "Build your own news media page—including your own reporting video—about a topic you care about, such as the Olympics.", 
            author      = "Radio Waves",
            url         = url('edit_project', 's2r'),
            img         = "/media/img/projects/S2r.png",
