Add http:// to upload media url

--- a/webpagemaker/learning_projects/templates/learning_projects/s2r.html
+++ b/webpagemaker/learning_projects/templates/learning_projects/s2r.html
@@ -10,7 +10,7 @@
     Make your own Sports Channel
     
     Step 1.) Change the text and link to articles that interest you e.g. Football.
-    Step 2.) Create your own video content or find content from other sites. Your school can sign up for a free station on Radiowaves, where you can upload media ('radiowaves.co.uk/s2r') or alternatively you can use a different site to upload content.
+    Step 2.) Create your own video content or find content from other sites. Your school can sign up for a free station on Radiowaves, where you can upload media ('http://radiowaves.co.uk/s2r') or alternatively you can use a different site to upload content.
     Step 3.) Change the title image, background and article layout to suit your own stories/news
     Step 4.) Rock out, because you're now a professional web developer with your very own Sports Channel :)
     
