Fixing typos, errors and problems in bully project

--- a/webpagemaker/learning_projects/templates/learning_projects/bully.html
+++ b/webpagemaker/learning_projects/templates/learning_projects/bully.html
@@ -17,8 +17,7 @@ Let's get started.
 
 <head>
 <!--
-Start by changing the <title> element to tell people what "you stand up for" for your webpage. Typically, the title will show up at the top of your browser window and will be searchable in search engines like Google. In Thimble, the title shows up in the tab above the pane on the
-right side of the editor.
+Start by changing the <title> element to tell people what "you stand up for" for your webpage. Typically, the title will show up at the top of your browser window and will be searchable in search engines like Google. In Thimble, the title shows up in the tab above the pane on the right side of the editor.
 -->
 
     <title>We Stand Up For _______</title>
@@ -26,20 +25,19 @@ right side of the editor.
 
 <body>
 <!--
-Use the <h1> tag below to define your header. Fill in the blanks below to tell people why you stand up for what you
-believe.
+Use the <h1> tag as shown below to define your header. Fill in the blanks below to tell people why you stand up for what you believe.
 -->
 
     <h1>I stand up for ________, because ________.</h1>
 
 <!--
-The first image represents important facts about your cause. Research some relevant statistics and see if you can find an image that illustrates it. Images are defined in HTML with the <img> tag. <img> is one of the few weird tags that you don't have to close. Every <img> tag has a src attribute where you include the URL to the image you want to use. To change the image below, replace the content within the quotes with a URL of another image. To get the URL of an image, right click or CTRL-click and select "Copy Image Address", or within Flickr, select Share, the copy the image URL.
+The first image represents important facts about your cause. Research some relevant statistics and see if you can find an image that illustrates it. Images are defined in HTML with the <img> tag. <img> is one of the few weird tags that you don't have to close. Every <img> tag has a src attribute where you include the URL to the image you want to use. To change the image below, replace the content within the quotes with a URL of another image. To get the URL of an image, right click (or CTRL-click on a Mac) and select "Copy Image Address". If you find an image on Flickr, you can select Share and copy the image URL from the dropdown.
 -->
 
     <img src="http://swadayagroup.com/orangehrm/templates/leave/anti-bullying-slogans-743.jpg">
         
 <!-- 
-The second image is to show how are you and your friends taking stand for what you believe in.
+The second image is to show how you and your friends are taking a stand for what you believe in.
 -->
     <img src="http://fullstop2bullying.yolasite.com/resources/No%20to%20bullying.jpg">
 
@@ -55,12 +53,11 @@ Change the text to tell others to band together for your cause
 Now find a website to send people to so they can support your cause (http://www.standforthesilent.org is a website that is standing up for the people being bullied, find a website that supports your cause). The more people there are behind it, the better the chances that your cause will succeed. Be the leader of your cause, and rally support behind you.
 -->
 
-    <h2>Visit ________ for more information and to support the cause. </h2>
+    <h2>Visit ________ for more information and to support the cause.</h2>
 
 <style>
 /*
-Everything in the <style> tag is called CSS and is used to handle the look and feel of your page. Try tinkering with the different kinds of style attributes. Maybe you want to change the formatting of the page by upping the size of the margins, or perhaps you are more interested in changing the font or reducing the font size. Have fun and remember that things can easily be
-undone or redone by pressing the undo and redo buttons on the top of the editor. 
+Everything in the <style> tag is called CSS and is used to handle the look and feel of your page. Try tinkering with the different kinds of style attributes. Maybe you want to change the formatting of the page by upping the size of the margins, or perhaps you are more interested in changing the font or reducing the font size. Have fun and remember that things can easily be undone or redone by pressing the undo and redo buttons on the top of the editor. 
 */
 
     h1 {
@@ -92,7 +89,7 @@ undone or redone by pressing the undo and redo buttons on the top of the editor.
     }
 
 /*
-To personalize your page even more you could change the background color by changing the background color code listed above. A list of colors and their codes are given here: http://html-color-codes.com. Or you can just type the name of your favorite color.
+To personalize your page even more you could change the background color by changing the background color code listed above. A list of colors and their codes are given here: http://www.ascii-code.com/html-color-names.php. Or you can just type the name of your favorite color. If you want to read more about color codes, you can read the "Web colors" entry on Wikipedia: http://en.wikipedia.org/wiki/Web_colors
 */
 
     body {
@@ -114,4 +111,3 @@ Now publish your work using the Publish button in the upper right corner. You'll
 </html>
 
  
-
