--- a/webpagemaker/learning_projects/templates/learning_projects/bully.html
+++ b/webpagemaker/learning_projects/templates/learning_projects/bully.html
@@ -5,7 +5,7 @@
 Use your HTML and CSS swagger to mix and match elements to make a webpage about something you're willing to take a stand for. [P.S. remember to fill in all the blanks]
 ===============================================
  -->
-
+ 
 <!--
 Let's get started.
 1) READ THROUGH THE COMMENTS. This is a comment. Everything inside of this tag for HTML or '/*' for CSS, is not processed as code, but as text comments about the code. For this project the comments will give you instructions, hints and guides to completing the project, so skim down through the comments to get an understanding of what you are being asked to do.
@@ -34,20 +34,20 @@ Use the <h1> tag as shown below to define your header. Fill in the blanks below 
 The first image represents important facts about your cause. Research some relevant statistics and see if you can find an image that illustrates it. Images are defined in HTML with the <img> tag. <img> is one of the few weird tags that you don't have to close. Every <img> tag has a src attribute where you include the URL to the image you want to use. To change the image below, replace the content within the quotes with a URL of another image. To get the URL of an image, right click (or CTRL-click on a Mac) and select "Copy Image Address". If you find an image on Flickr, you can select Share and copy the image URL from the dropdown.
 -->
 
-    <img src="http://swadayagroup.com/orangehrm/templates/leave/anti-bullying-slogans-743.jpg">
-
-<!--
+    <img src="{{ HTTP_STATIC_URL }}bully/anti-bullying-slogans-743.jpg">
+        
+<!-- 
 The second image is to show how you and your friends are taking a stand for what you believe in.
 -->
-    <img src="http://fullstop2bullying.yolasite.com/resources/No%20to%20bullying.jpg">
+    <img src="{{ HTTP_STATIC_URL }}bully/No%20to%20bullying.jpg">
 
-<!--
+<!-- 
 Change the text to tell others to band together for your cause
 -->
 
     <h1>Let's stand up for _________ together.</h1>
 
-    <img src="http://www.standforthesilent.org/images/slider.jpg">
+    <img src="{{ HTTP_STATIC_URL }}bully/slider.jpg">
 
 <!--
 Now find a website to send people to so they can support your cause (http://www.standforthesilent.org is a website that is standing up for the people being bullied, find a website that supports your cause). The more people there are behind it, the better the chances that your cause will succeed. Be the leader of your cause, and rally support behind you.
@@ -57,35 +57,35 @@ Now find a website to send people to so they can support your cause (http://www.
 
 <style>
 /*
-Everything in the <style> tag is called CSS and is used to handle the look and feel of your page. Try tinkering with the different kinds of style attributes. Maybe you want to change the formatting of the page by upping the size of the margins, or perhaps you are more interested in changing the font or reducing the font size. Have fun and remember that things can easily be undone or redone by pressing the undo and redo buttons on the top of the editor.
+Everything in the <style> tag is called CSS and is used to handle the look and feel of your page. Try tinkering with the different kinds of style attributes. Maybe you want to change the formatting of the page by upping the size of the margins, or perhaps you are more interested in changing the font or reducing the font size. Have fun and remember that things can easily be undone or redone by pressing the undo and redo buttons on the top of the editor. 
 */
 
     h1 {
-	text-align: center;
-	margin: 0 auto;
-	text-shadow: 5px 5px 0px #000000;
-	filter: dropshadow(color=#000000, offx=5, offy=5);
-	color: white;
-	font-family: fantasy;
-	font-size: 68px;
-	padding-top: 20px;
+        text-align: center;
+        margin: 0 auto;
+        text-shadow: 5px 5px 0px #000000;
+        filter: dropshadow(color=#000000, offx=5, offy=5);
+        color: white;
+        font-family: fantasy;
+        font-size: 68px;
+        padding-top: 20px;
     }
-
+    
     h2 {
-	text-align: center;
-	margin: 0 auto;
-	text-shadow: 5px 5px 0px #000000;
-	filter: dropshadow(color=#000000, offx=5, offy=5);
-	color: white;
-	font-family: fantasy;
-	font-size: 40px;
+        text-align: center;
+        margin: 0 auto;
+        text-shadow: 5px 5px 0px #000000;
+        filter: dropshadow(color=#000000, offx=5, offy=5);
+        color: white;
+        font-family: fantasy;
+        font-size: 40px;
     }
 
     img {
-	border: 10px solid #000;
-	margin: 20px auto;
-	display: block;
-	width: 600px;
+        border: 10px solid #000;
+        margin: 20px auto;
+        display: block;
+        width: 600px;
     }
 
 /*
@@ -93,12 +93,12 @@ To personalize your page even more you could change the background color by chan
 */
 
     body {
-	background-color: #3999ff;
+        background-color: #3999ff;
     }
 
 </style>
 
-<!--
+<!-- 
 Well done, webmaker! You've taken a stance and learned some webmaking skills in the process! You can now wrangle text and images in HTML and style your page with some basic CSS.
 -->
 
@@ -109,3 +109,5 @@ Now publish your work using the Publish button in the upper right corner. You'll
 </body>
 
 </html>
+
+ 
