--- a/webpagemaker/editor/templates/editor/editor.html
+++ b/webpagemaker/editor/templates/editor/editor.html
@@ -7,7 +7,7 @@
 
     <title>Mozilla Thimble</title>
     <link rel="stylesheet" href="{{ MEDIA_URL }}friendlycode/css/friendlycode.css">
-    <link rel="stylesheet" href="{{ MEDIA_URL }}friendlycode/css/thimble.css">
+    <link rel="stylesheet" href="{{ MEDIA_URL }}css/editor.css">
   </head>
   <body>
      <a href="http://www.mozilla.org/" id="tabzilla">mozilla</a>
@@ -15,7 +15,7 @@
     <header id="thimble-header">
       <div class="logo">
         <a href="/">
-          <img src="{{ MEDIA_URL }}friendlycode/img/thimble-logo.png" alt="Mozilla Thimble">
+          <img src="{{ MEDIA_URL }}img/thimble-logo.png" alt="Mozilla Thimble">
         </a>
       </div>
     </header>
@@ -28,6 +28,9 @@
                      'script>');
     </script>
     <script src="{{ MEDIA_URL }}friendlycode/js/require-config.js"></script>
+    <script>
+    require.paths.thimble = '{{ MEDIA_URL }}js/thimble';
+    </script>
     <script src="{{ MEDIA_URL }}friendlycode/js/require.min.js"></script>
     <script>
     "use strict";
@@ -36,7 +39,7 @@
       var $ = require("jquery"),
           FriendlycodeEditor = require('friendlycode');
 
-      require("typekit-ready!");
+      require("thimble/typekit-ready!");
 
       return FriendlycodeEditor({
         publishURL: "{{ PUBLISH_URL }}",
@@ -51,7 +54,7 @@
 
     <!-- this COULD hold up the page, so do this absolutely last -->
     <link rel="stylesheet" href="//www.mozilla.org/tabzilla/media/css/tabzilla.css">
-    <link rel="stylesheet" href="{{ MEDIA_URL }}friendlycode/css/tabzilla-overrides.css">
+    <link rel="stylesheet" href="{{ MEDIA_URL }}css/editor-tabzilla-overrides.css">
     <script>
     // tabzilla.js will inject jQuery itself if it doesn't see it at
     // load time, which is a problem for us because it creates a race
